# core-data

./: Cargo.toml  README.md
examples/: usage.rs
src/models/: auditlog.rs  message.rs  mod.rs  payload.rs  task.rs  workflow.rs
tests/: message-test.rs  workflow-test.rs
