[package]
name = "core-data"
version = "0.1.0"
edition = "2021"
exclude = ["/xsd", "/xml", ".DS_Store", "/target", ".vscode", "generate.sh"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "Open Payments - Payment Processor"
readme = "../README.md"
homepage = "https://github.com/Open-Payments/messages"
repository = "https://github.com/Open-Payments/messages"
keywords = ["financial", "payments", "message", "iso20022", "processor"]
categories = ["data-structures", "development-tools", "finance", "parsing", "parser-implementations"]

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
sonyflake = "0.3"